@@ -2,7 +2,23 @@
 light:
   - "brightness = `cat /sys/class/backlight/intel_backlight/brightness`.to_i"
   - "exit if @backlight == 'nil' && brightness == 0"
+flash:
+  - "displays = `xvinfo`.scan(/screen\\s#(\\d+)/i).flatten"
+  - "displays.each do |display|"
+  - "  display = display.eql?('0') ? '' : '.' + display"
+  - "  active = `DISPLAY=:0#{display} xprop -root '_NET_ACTIVE_WINDOW'`.scan(/\\w+/).last"
+  - "  unless `xprop -id '#{active}' | grep '_NET_WM_STATE_FULLSCREEN'`.empty?"
+  - "    title = `xprop -id '#{active}' | grep 'WM_CLASS(STRING)'`"
+  - "    ['unknown', 'plugin-containe', 'exe'].each do |name|"
+  - "      if title.scan(name).last == name"
+  - "        chrome = `pgrep -lfc '.*((c|C)hrome|chromium).*flashp.*'`"
+  - "        firefox = `pgrep -lfc 'plugin-containe'`"
+  - "        exit if firefox > 1 || chrome > 1"
+  - "      end"
+  - "    end"
+  - "  end"
+  - "end"
 players:
   - "%w(xbmc kodi vlc).each do |player|"
-  - "exit if `ps -el | grep '#{player}' | wc -l`.to_i > 0"
+  - "  exit if `pgrep -lfc '#{player}'`.to_i > 0"
   - "end"
