@@ -1,5 +1,6 @@
 ** 1.4.12 (Сб 03 окт 2015 13:08:17)
 - manage volumes on inputs ... down ... up ...
+- merge for default params with params ...
 ** 1.3.12 (Пт 02 окт 2015 09:37:39)
 - fix conditions ... delete xbacklight from dependence ...
 ** 1.3.11 (Чт 01 окт 2015 18:40:50)
